# src/core/Auth/Auth.controller.ts
@@ -1,8 +1,9 @@
 import { Body, Controller, Post } from '@nestjs/common'
-import { ApiBody, ApiTags } from '@nestjs/swagger'
+import { ApiBody, ApiOkResponse, ApiTags } from '@nestjs/swagger'
+import { ApiErrorResponse } from 'src/decorators/ErrorResponse.decorator'
 
 import { AuthService } from './Auth.service'
-import { TLoginData, TUserRegistration } from './types'
+import { TAuthResponseData, TLoginData, TUserRegistration } from './types'
 
 @ApiTags('Authorization Controller')
 @Controller('/auth')
@@ -11,12 +12,15 @@ export class AuthController {
 
   @Post('/registration')
   @ApiBody({ type: TUserRegistration })
+  @ApiOkResponse({ type: TAuthResponseData, status: 201 })
+  @ApiErrorResponse()
   registration(@Body() userRegistrationData: TUserRegistration) {
     return this.authService.registration(userRegistrationData)
   }
 
   @Post('/login')
   @ApiBody({ type: TLoginData })
+  @ApiOkResponse({ type: TAuthResponseData })
   login(@Body() loginData: TLoginData) {
     return this.authService.login(loginData)
   }
