# src/core/Auth/types.ts
@@ -79,3 +79,18 @@ export class TLoginData {
   @ApiProperty({ type: 'string' })
   password: string
 }
+
+export class TAuthResponseData {
+  @ApiProperty({
+    example:
+      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6ImV4YW1wbGVAZXhhbXBsZS5jb20iLCJpYXQiOjE2NzcyNjc4NDcsImV4cCI6MTY3NzI2OTA0N30.jak0XNbOfp6nNVbaOQONM9aoH9mJ2LlNpDHh3n_1_oY',
+    type: 'string',
+  })
+  access_token: string
+  @ApiProperty({
+    example:
+      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6ImV4YW1wbGVAZXhhbXBsZS5jb20iLCJpYXQiOjE2NzcyNjc4NDcsImV4cCI6MTY3NzI2OTA0N30.jak0XNbOfp6nNVbaOQONM9aoH9mJ2LlNpDHh3n_1_oY',
+    type: 'string',
+  })
+  refresh_token: string
+}
