# src/types/errorResponse.ts
@@ -1,0 +1,6 @@
+import { ApiProperty } from '@nestjs/swagger'
+
+export class TErrorResponseBody {
+  @ApiProperty({ example: 'Error message' })
+  message?: string
+}
