# swagger.json
@@ -13,7 +13,32 @@
             }
           }
         },
-        "responses": { "201": { "description": "" } },
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": { "$ref": "#/components/schemas/TAuthResponseData" }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request",
+            "content": {
+              "application/json": {
+                "schema": { "$ref": "#/components/schemas/TErrorResponseBody" }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": { "$ref": "#/components/schemas/TErrorResponseBody" }
+              }
+            }
+          }
+        },
         "tags": ["Authorization Controller"]
       }
     },
@@ -29,7 +54,16 @@
             }
           }
         },
-        "responses": { "201": { "description": "" } },
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": { "$ref": "#/components/schemas/TAuthResponseData" }
+              }
+            }
+          }
+        },
         "tags": ["Authorization Controller"]
       }
     }
@@ -87,6 +121,27 @@
           "experience",
           "password"
         ]
+      },
+      "TAuthResponseData": {
+        "type": "object",
+        "properties": {
+          "access_token": {
+            "type": "string",
+            "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6ImV4YW1wbGVAZXhhbXBsZS5jb20iLCJpYXQiOjE2NzcyNjc4NDcsImV4cCI6MTY3NzI2OTA0N30.jak0XNbOfp6nNVbaOQONM9aoH9mJ2LlNpDHh3n_1_oY"
+          },
+          "refresh_token": {
+            "type": "string",
+            "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6ImV4YW1wbGVAZXhhbXBsZS5jb20iLCJpYXQiOjE2NzcyNjc4NDcsImV4cCI6MTY3NzI2OTA0N30.jak0XNbOfp6nNVbaOQONM9aoH9mJ2LlNpDHh3n_1_oY"
+          }
+        },
+        "required": ["access_token", "refresh_token"]
+      },
+      "TErrorResponseBody": {
+        "type": "object",
+        "properties": {
+          "message": { "type": "string", "example": "Error message" }
+        },
+        "required": ["message"]
       },
       "TLoginData": {
         "type": "object",
